--- a/Informicus-test-project/Views/Home/Times.cshtml
+++ b/Informicus-test-project/Views/Home/Times.cshtml
@@ -8,7 +8,7 @@
 
     <div class="starter-template">
         <h1>Times</h1>
-        <p class="lead">Current time:</p>
+        <p class="lead">Current time: @ViewBag.CurrentTime</p>
     </div>
 
 </div><!-- /.container -->
