--- a/Informicus-test-project/Views/Home/Index.cshtml
+++ b/Informicus-test-project/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
