--- a/Informicus-test-project/Views/Shared/_Layout.cshtml
+++ b/Informicus-test-project/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/">Home</a></li>
                     <li><a href="~/Home/Times">Times</a></li>
+                    <li><a href="~/Home/Users">Users</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
