--- a/Informicus-test-project/Views/Home/Users.cshtml
+++ b/Informicus-test-project/Views/Home/Users.cshtml
@@ -20,6 +20,13 @@
             
         </ul>
 
+        <h2>Groups</h2>
+        <div id="detailsDiv"></div>
+
+
     </div>
 
 </div>
+<script>
+    $('#detailsDiv').load('/Home/Groups');
+</script>
