Добавлен класс UsersGroupsViewModel и реализован вывод через частичное представление

--- a/Informicus-test-project/Views/Home/Users.cshtml
+++ b/Informicus-test-project/Views/Home/Users.cshtml
@@ -23,7 +23,8 @@
         <h2>Groups</h2>
         <div id="detailsDiv"></div>
 
-
+       
+        @{Html.RenderAction("UsersGroups");}
     </div>
 
 </div>
