--- a/Informicus-test-project/Views/Register/Register.cshtml
+++ b/Informicus-test-project/Views/Register/Register.cshtml
@@ -9,42 +9,53 @@
 <div id="content">
     <div class="container">
 
-        <div class="row">
+        <div class="row packages">
+
             <div class="col-md-6">
-                <div class="box">
-                    <h2 class="text-uppercase">New account</h2>
+                <div class="package ">
+                    <div class="package-header light-gray">
+                        <h5>Клиент</h5>
+                    </div>
+                    
+                    <ul>
+                        <li><i class="fa fa-check"></i>Публикация заявок</li>
+                        <li><i class="fa fa-check"></i>История заявок</li>
+                        <li><i class="fa fa-check"></i>Безопасные сделки</li>
+                        <li><i class="fa fa-check"></i>Публикация отзывов</li>
+                    </ul>
+                    <a href="@Url.Action("RegisterUser", "Register", new { id = 1 })" class="btn btn-template-main">
+                        Зарегистрироваться клиентом
+                    </a>
+                </div>
+            </div>
+            <!-- / END FIRST PACKAGE -->
 
-                    <p class="lead">Not our registered customer yet?</p>
-                    <p>With registration with us new world of fashion, fantastic discounts and much more opens to you! The whole process will not take you more than a minute!</p>
-                    <p class="text-muted">If you have any questions, please feel free to <a href="contact.html">contact us</a>, our customer service center is working for you 24/7.</p>
-
-                    <hr>
-
-                    <form action="customer-orders.html" method="post">
-                        <div class="form-group">
-                            <label for="name-login">Name</label>
-                            <input type="text" class="form-control" id="name-login">
-                        </div>
-                        <div class="form-group">
-                            <label for="email-login">Email</label>
-                            <input type="text" class="form-control" id="email-login">
-                        </div>
-                        <div class="form-group">
-                            <label for="password-login">Password</label>
-                            <input type="password" class="form-control" id="password-login">
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-template-main"><i class="fa fa-user-md"></i> Register</button>
-                        </div>
-                    </form>
+            <div class="col-md-6">
+                <div class="package ">
+                    <div class="package-header light-gray">
+                        <h5>Нотариус</h5>
+                    </div>
+                    
+                    <ul>
+                        <li><i class="fa fa-check"></i>Поиск заказчиков</li>
+                        <li><i class="fa fa-check"></i>История заявок</li>
+                        <li><i class="fa fa-check"></i>Безопасные сделки</li>
+                        <li><i class="fa fa-check"></i>Auto Backup</li>
+                    </ul>
+                    <a href="@Url.Action("RegisterUser", "Register", new { id = 2 })" class="btn btn-template-main">
+                        Зарегистрироваться нотариусом
+                    </a>
                 </div>
             </div>
 
-            <div class="col-md-6">
+        </div>
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-md-12">
                 <div class="box">
-                    <h2 class="text-uppercase">Login</h2>
+                    <h2 class="text-uppercase text-center">Войти</h2>
 
-                    <p class="lead">Already our customer?</p>
+                    <p class="lead text-center">Вы уже зарегистрированы у нас?</p>
                     <p class="text-muted">
                         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
                         ultricies mi vitae est. Mauris placerat eleifend leo.
@@ -67,9 +78,7 @@
                     </form>
                 </div>
             </div>
-
         </div>
-        <!-- /.row -->
 
     </div>
     <!-- /.container -->
