Revert "Добавлен вывод тегов, ссылки на артиста. Сделана обрезка текста биографии."
This reverts commit 9bfca6bb8c8d035c0cb18a5306286e35bcfa9fe4.

--- a/Informicus-test-project/Views/Home/Users.cshtml
+++ b/Informicus-test-project/Views/Home/Users.cshtml
@@ -15,7 +15,7 @@
             
             @foreach (User user in Model)
             {
-                <li class="list-group-item">Id - @user.Id, Nickname - @user.UserName, Group - @user.GroupId</li>
+                <li class="list-group-item">Id - @user.UserId, Nickname - @user.UserNickname, Group - @user.GroupId</li>
             }
             
         </ul>
